RESOLVED FIXED 260227
[IFC] TextOnlyLineBuilder should handle content with 'wordBreak: break-word' and 'overflow-wrap: anywhere'
https://bugs.webkit.org/show_bug.cgi?id=260227
Summary [IFC] TextOnlyLineBuilder should handle content with 'wordBreak: break-word' ...
zalan
Reported 2023-08-15 15:54:57 PDT
ssia
Attachments
[fast-cq]Patch (1.72 KB, patch)
2023-08-15 15:59 PDT, zalan
no flags
zalan
Comment 1 2023-08-15 15:59:07 PDT
Created attachment 467285 [details] [fast-cq]Patch
EWS
Comment 2 2023-08-16 12:05:10 PDT
Committed 266951@main (513717061cf7): <https://commits.webkit.org/266951@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467285 [details].
Radar WebKit Bug Importer
Comment 3 2023-08-16 12:06:18 PDT
Note You need to log in before you can comment on or make changes to this bug.