[IFC] TextOnlyLineBuilder should handle content with 'wordBreak: break-word' and 'overflow-wrap: anywhere' https://bugs.webkit.org/show_bug.cgi?id=260227

Reviewed by Antti Koivisto.

TextOnlyLineBuilder already has the concept of "wrap opportunity list" which is required to support these properties.
(i.e. no performance penalty)

* Source/WebCore/layout/formattingContexts/inline/TextOnlyLineBuilder.cpp:
(WebCore::Layout::TextOnlyLineBuilder::isEligibleForSimplifiedTextOnlyInlineLayout):

Canonical link: https://commits.webkit.org/266951@main